Update PlayerSoulData.java